# translaitor

./: .env.example  .gitignore  CONFIGURATION.md  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  cli.py  config.ini.example  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh
.github/workflows/: lint.yml
src/: base_handler.py  docx_handler.py  extractor.py  pptx_handler.py  reintegrator.py  translation_prompts.py  translator.py  utils.py
